(mq) Use virtual threads for MqOutbox